<resources>
    <string name="app_name">Feeding Bangladesh</string>
    <string name="donor">Donor</string>
    <string name="volunteer">Volunteer</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Sign in</string>
    <string name="registration">Register</string>
    <string name="share_your_meal_with_feeding_bangladesh">Share Your Meal With Feeding Bangladesh !! </string>
    <string name="title_activity_volunteer_map">Map</string>
    <string name="donate_food_details">Donate Food Details</string>
    <string name="pickup_food_from_this_place">Please pickup food from this address</string>
    <string name="pickup_where">Pickup where?</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="quantity">Quantity:</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="register_now">Register Now</string>

    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="please_enter_your_login_information">Please enter your login information</string>
    <string name="phone_number">Phone Number</string>
    <string name="photos">Photos</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit_search_volunteer">Submit</string>
    <string name="click_the_submit_button_for_submitting_food_details_nand_search_volunteer">Click the submit button for submitting food details \nand search volunteer</string>
    <string name="receive_food">Receive Food</string>
    <string name="register_as">Register as</string>
    <string name="want_to_deliver_food">Want To Deliver Food?</string>
    <string name="title_activity_v_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="find_volunteer">Find Volunteer</string>
    <string name="settings">Settings</string>
    <string name="working">Working</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="tips_go_to_the_settings_option_and_set_your_profile_info_first">Tips: Go to the settings option and set your profile info first</string>


</resources>