<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7941e"
    tools:context=".DonorLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/etDonorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_your_email"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/etDonorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:textSize="15sp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnDonorLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:background="#FFFFFF"
            />
        <Button
            android:id="@+id/btnDonorRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"

            />

    </LinearLayout>


</LinearLayout>