<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodDonateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_donatefd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#f7941e"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/donate_food_details" />


        <ImageButton
            android:id="@+id/ib_cancel"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:srcCompat="@android:drawable/ic_notification_clear_all" />


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tv_fooditems"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food Items"
            />


        <EditText
            android:id="@+id/et_fooditems"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>


        <TextView
            android:id="@+id/tv_quantity"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            />

        <EditText
            android:id="@+id/et_quantity"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn_submit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="95dp"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#f7941e"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/submit_search_volunteer"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/click_the_submit_button_for_submitting_food_details_nand_search_volunteer"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_go_to_the_settings_option_and_set_your_profile_info_first"
            />


    </LinearLayout>

</LinearLayout>